@@ -139,6 +139,7 @@ Thomas Gagne		tgagne@ix.netcom.com
 Thomas Morgan		tmorgan@pobox.com
 Thomas Tanner		tanner@ffii.org
 Tim Goodwin		tjg@star.le.ac.uk
+Tim Van Holder		tim.van.holder@pandora.be
 Ulrich Drepper		drepper@gnu.ai.mit.edu
 Vadim Zeitlin		Vadim.zeitlin@dptmaths.ens-cachan.fr
 Werner Koch		wk@isil.d.shuttle.de
