@@ -5027,7 +5027,7 @@ sub yacc_lex_finish_helper
     }
     else
     {
-	&define_variable ('YLWRAP', '$(srcdir)/ylwrap');
+	&define_variable ('YLWRAP', '$(top_srcdir)/ylwrap');
     }
 }
 
