@@ -295,6 +295,7 @@ yacc.test \
 yacc2.test \
 yacc3.test \
 yacc4.test \
+yacc6.test \
 yaccpp.test \
 yaccvpath.test
 
