@@ -1,0 +1,37 @@
+#! /bin/sh
+
+# Test to make sure ylwrap put in right location.
+# Report from Tim Van Holder.
+
+. $srcdir/defs || exit 1
+
+cat > configure.in << 'END'
+AC_INIT
+AM_INIT_AUTOMAKE(nonesuch, nonesuch)
+AC_ARG_PROGRAM
+AC_PROG_INSTALL
+AC_PROG_MAKE_SET
+AC_PROG_CC
+AC_PROG_YACC
+AC_OUTPUT(Makefile sub/Makefile)
+END
+
+cat > Makefile.am << 'END'
+SUBDIRS = sub
+END
+
+mkdir sub
+
+cat > sub/Makefile.am << 'END'
+bin_PROGRAMS = foo
+foo_SOURCES = foo.y bar.y
+END
+
+: > sub/foo.y
+: > sub/bar.y
+
+$ACLOCAL || exit 1
+$AUTOMAKE -a || exit 1
+test -f ylwrap || exit 1
+fgrep '(srcdir)/ylwrap' sub/Makefile.in && exit 1
+exit 0
