@@ -1,3 +1,10 @@
+2001-06-14  Tom Tromey  <tromey@redhat.com>
+
+	* automake.in (yacc_lex_finish_helper): Find ylwrap in
+	top_srcdir.  From Tim Van Holder.
+	* tests/Makefile.am (TESTS): Added yacc6.test.
+	* tests/yacc6.test: New file.
+
 2001-06-14  Tim Van Holder  <tim.van.holder@pandora.be>
 
 	* tests/defs, tests/installsh.test: Properly support
